# toolkits

./: .gitignore  .pre-commit-config.yaml
cooklang-py/: README.md  pyproject.toml  test.py
cooklang-py/cooklang/: __init__.py  hugo.py  parser.py
cooklang-py/tests/: canonical.yaml  test_canonical.py  test_comment.py  test_hugo.py  test_metadata.py  test_number.py  test_parser.py  test_regexes.py  test_words.py  testing_comment.py  testing_number.py  testing_words.py
flex/: Makefile  example2.l  test2.txt
flex_bison/: Readme.md
git/: git.md
github_stars_history/: api.py
google_sheet/: gs.js
minecraft_history/: Cargo.toml  Makefile
minecraft_history/src/: main.rs
pnj_vignette_generation/: Cargo.toml  conf copy 2.yaml  conf.yaml
pnj_vignette_generation/src/: main.rs
pre-commit-update/: Cargo.toml  Readme.md
pre-commit-update/src/: main.rs
python/: nodes.csv
snippets/docker/: docker.md
snippets/flex/: Readme.md  example1.l  example3.l  test.txt
snippets/flex_bison/: Makefile  example1.l  example1.y  test.txt
snippets/git/: git.md
snippets/python/: fast_api_js.py  hamming.py  misc.py  netcat.py  onnx_sklearn.py
