[package]
name = "pnj_vignette_generation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ordered-float = "3.0.0"
image = "0.24.3"
imageproc = "0.23.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.11"
rusttype = "0.9.2"
fast_image_resize = "1.0.0"
